k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diabetes-mlservice
  labels:
    app: diabetes-mlservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diabetes-mlservice
  template:
    metadata:
      labels:
        app: diabetes-mlservice
      containers:
        - name: mlservice
          image: diabetes-mlservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 60

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
