k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diabetes-mlservice
spec:
  type: NodePort
  selector:
    app: diabetes-mlservice
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 31110
